--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -2,14 +2,13 @@
 
 $config = array();
 
-// Regex to match against the email to determine if from your organization
-$config['org_email_regex'] = "/@(.*\.|)iitb\.ac\.in/i";
+// Display avatars
+// Set to 'false' if you don't want to display avatars
+$config['rcp_showAvatar'] = true;
 
-// Turn on letter avatars
-$config['avatars'] = true;
-
-// Make external avatars hexagon
-$config['avatars_external_hexagon'] = true;
+// Regex to match against the email to check if from your organisation
+// The following regex matches [anyone]@kinoras.me
+$config['rcp_mailRegex'] = "/@(.*\.|)kinoras\.me/i";
 
 // Header that marks the message as SPAM. ('Yes').
 $config['x_spam_status_header'] = 'x-spam-status';
@@ -22,8 +21,3 @@ $config['spam_level_threshold'] = 4;
 
 // Header that marks the message as SPF fail. ('Pass' to pass).
 $config['received_spf_header'] = 'received-spf';
-
-// Display images for avatars
-// If you don't use images for avatars, set `false` to save performance
-$config['avatar_images'] = true;
-
