refactor: rebuild warning system

--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -21,6 +21,8 @@ $config['rcp_virusDescriptionHeader'] = 'X-RCP-Virus-Description';
 
 // Header of SPF staus
 $config['rcp_spfHeader'] = 'Received-SPF';
+$config['rcp_spfRegex'] = "/^(Failed|Softfailed)/i";
+
 
 $config['rcp_hashHeader'] = 'X-RCP-Hash';
 $config['rcp_salt'] = 'iy9Rd@CG!MemBt';
